# local-llm-benchmark

./: .gitignore  README.md  pyproject.toml
bench/: cli.py  db.py  judge.py  ollama.py  openai_client.py  pairwise.py  registry.py  report.py  runner.py  sampler.py  schema.py  tasks_loader.py  tournament.py
explorer/: app.py
fixtures/voice/: README.md
prompts/: judge_pairwise.md  judge_rubric.md  system_defaults.md
results/: LOG.md  REPORT.md
results/reports/: 20260408-170404-efa0.md  20260408-171258-e853.md  20260408-174614-8288.md  20260408-180641-b59b.md  20260408-181410-b945.md  20260408-193352-5307.md  20260408-194007-9e9b.md  20260408-194211-385b.md  20260408-202433-cdfc.md  20260408-202839-7509.md  20260408-211759-4bd1.md  20260408-222438-af70.md  20260408-231607-961d.md  20260409-002213-6576.md  20260409-002624-c94f.md  20260409-004540-f17a.md  20260409-005251-58c9.md  20260409-011246-c011.md  20260409-015439-c96d.md  20260409-095845-92b3.md  20260409-101125-02b0.md  20260409-111513-82a2.md  20260409-172056-d915.md
scripts/: gemma4-e4b-q8.Modelfile  overnight.sh  reap_qwen_bench.sh  rerun_thinking_models.sh
tasks/agentic_tools/: tool_enum_constraint.yaml  tool_missing_info.yaml  tool_multi_step.yaml  tool_multi_turn_context.yaml  tool_no_tool_needed.yaml  tool_param_types.yaml  tool_refuse_unsafe.yaml  tool_schema_strict.yaml  tool_weather_call.yaml  tool_wrong_tool.yaml
tasks/coding_bash/: sh_curl_jq.yaml  sh_find_large_files.yaml  sh_safe_script.yaml
tasks/coding_elixir/: ex_enum_pipeline.yaml  ex_genserver.yaml  ex_pattern_match.yaml
(+19 files in other folders)
